# led

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  rust.yml
src/: lib.rs  magic_home.rs  main.rs
