[package]
name = "led"
version = "0.1.0"
authors = ["João Coutinho <j.afonso.coutinho@tecnico.ulisboa.pt>"]
edition = "2018"
description = "Remotely send commands to RGB controller"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
